# reverse-ssh-interface

./: .gitignore  Cargo.toml  README.md
assets/: default-config.toml
assets/examples/: known_hosts.example  profile-example.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmd/: down.rs  logs.rs  mod.rs  profile.rs  status.rs  up.rs
cli/src/output/: format.rs  mod.rs
cli/tests/: cli_test.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  prelude.rs
core/src/config/: load.rs  mod.rs  model.rs  paths.rs
core/src/ssh/: args.rs  detect.rs  known_hosts.rs  mod.rs  spawn.rs
core/src/storage/: keyring.rs  mod.rs  state.rs
core/src/supervisor/: backoff.rs  manager.rs  mod.rs  monitor.rs
core/src/types/: events.rs  mod.rs  profile.rs  session.rs
core/src/util/: mod.rs  redact.rs
docs/: 00.start.md  01.structure.md
gui/: Cargo.toml  tauri.conf.json
gui/icons/: README.md  icon.icns
gui/src/: main.rs
gui/ui/: app.js  index.html  styles.css
web/server/: Cargo.toml
web/server/src/: lib.rs  main.rs  state.rs  static_files.rs
web/server/src/routes/: health.rs  mod.rs  profiles.rs  sessions.rs  types.rs  ws.rs
web/server/tests/: api_test.rs
