[package]
name = "reverse_ssh_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reverse_ssh_core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
inquire = "0.9.1"
tracing-subscriber = "0.3.22"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
