[package]
name = "reverse_ssh_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rssh"
path = "src/main.rs"

[dependencies]
reverse_ssh_core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
