[package]
name = "reverse_ssh_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
toml = "0.9.11"
which = "8.0.0"
tempfile = "3.24.0"
utoipa = { version = "5.4.0", features = ["chrono", "macros"] }
libc = "0.2.180"
serde_json = "1.0.149"
