[package]
name = "reverse_ssh_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "process", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
which = "6"

[dev-dependencies]
tempfile = "3"
