[package]
name = "reverse_ssh_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
reverse_ssh_core = { path = "../../core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = "1.0.228"
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures-util = "0.3.31"
