[package]
name = "reverse_ssh_web_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rssh-web"
path = "src/main.rs"

[dependencies]
reverse_ssh_core = { path = "../../core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa = { version = "5", features = ["chrono", "axum_extras", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum-test = "18"
